$Header$

MBDyn (C) is a multibody analysis code.
http://www.mbdyn.org

Copyright (C) 1996-2015

Pierangelo Masarati     <masarati@aero.polimi.it>
Paolo Mantegazza        <mantegazza@aero.polimi.it>


MBDyn 1.X-Devel
	Enhancements:
		- added screw joint (Mauro Manetti & Marco Morandini)
		- added ModalBody: body connected to modal node
		  (Reinhard Resch)
	Backward compatibility issues:
	Known issues:
	Bug fixes:
		- fixed possibility to turn off output of aero elements
		- fixed structural forces in inverse dynamics
		  (Andrea Zanoni, noted by Davide Ivone)
		- fixed off-by-one bug in socket stream drive
		- fixed invalid memory access bug in viscoelastic
		  displacement joint Jacobian matrix initial assembly
		  (Reinhard Resch); assembly still needs work
		- fixed bug in EasyAnim post-processing of total joints
		- fixed bug in strain gage priv data (noted by Jason)
		- fixed EOF handling on arm
		- fixed check for body connected to modal node
		  (noted by Reinhard Resch)
		- fixed parsing of modal joint "origin node" in string format
		  (noted by Reinhard Resch)

MBDyn 1.7.0
	Enhancements:
		- (optional) new handling of math expressions and
		  "string" drive caller (With the contribution
		  of Ankit Aggarwal during Google Summer of Code 2015)
	Backward compatibility issues:
		- (input and) output of "remarks" changed
	Known issues:
		- aeromodal with rigid-body motion needs work
		- deformable displacement joint initial assembly broken
		- modal joint initial assembly with initial modal disp. broken
	Bug fixes:
		- fixed math parser bug with undefined vare at beginning
		  of expression (noted by Andrea Zanoni)
		- fixed potential buffer overflow when parsing long numbers
		- fixed use of 'reference' for absolute/relative vector drives
		  (noted by Doug Baldwin)

MBDyn 1.6.1
	Enhancements:
		- added hostname support to utils
		- added module for file drive input from LeapMotion device
		- rod without offset now works with displacement nodes